--- a/src/scss/core/extra/extra.scss
+++ b/src/scss/core/extra/extra.scss
@@ -99,3 +99,57 @@ body .jqstooltip {
         line-height: 210px;
     }
 }
+
+//landing page style
+.land-topbar{
+    line-height: 50px;
+}
+.version-title{
+    font-weight: 500;
+}
+.live-box {
+    position: relative;
+    .overlay {
+        position: absolute;
+        width: 100%;
+        top: 0;
+        left: 0;
+        background: rgba(255, 255, 255, 0.5);
+        text-align: center;
+        height: 100%;
+        display: none;
+        .live-btn {
+            position: relative;
+            top: 45%;
+            padding: 10px 20px;
+        }
+    }
+    &:hover {
+        .overlay {
+            display: block;
+        }
+    }
+}
+
+.pro-demo{
+    box-shadow: 5px 4px 8px rgb(175, 181, 193);
+}
+
+.lite-list{
+    li{
+        font-size: 15px;
+        span{
+            color: $dark;
+        }
+    }
+}
+
+.pro-list{
+    li{
+        color: $blue;
+        font-size: 15px;
+        span{
+            color: $dark;
+        }
+    }
+}
