--- a/scss/style.scss
+++ b/scss/style.scss
@@ -30,3 +30,5 @@ File: scss
 @import "icons/weather-icons/css/weather-icons.min.css";
 @import "icons/themify-icons/themify-icons.css";
 @import "icons/material-design-iconic-font/css/materialdesignicons.min.css";
+
+@import "landingpage";
